--- a/intellij/play/res/lang/english.lang
+++ b/intellij/play/res/lang/english.lang
@@ -112,6 +112,15 @@ loadAdventureFileEncrWrongPassword:[[red:Unable to unpack adventure!<br>This cou
 mainFramePlayerInputDisabled:[[red:Input is currently disabled]]
 mainFramePlayerInputNoCommand:[[red:You cannot do that]]
 
+savestateEnterName:Enter a name for the [[gold:savestate]]
+savestateInvalidName:Enter a valid name for the [[gold:savestate]]
+savestateSavestateAvailable:There is a [[gold:savestate]] available for this adventure.
+savestateSavestatesAvailable:There are [[gold:savestate]] available for this adventure.
+savestateSelectSavestate:Which [[gold:savestate]] do you want to select?
+savestateStartNewGame:Start a new game
+savestateCreatedSuccess:Created [[gold:savestate]] [[green:{1}]]
+savestateCreatedFailed:Could not create [[gold:savestate]] [[red:{1}]]
+
 langSelectionText:Language selection:
 langInfoAuthorText:Author:
 langInfoVersionText:Version:
